--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,7 @@
 						<h4 class="text-wh mx-auto my-4"><strong> Here are some questions we'll answer</strong></h4>
 						<p class="text-li mx-auto mt-2">
 							1. What crop to plant here? <br>
-							2. What fertilizer to use? <br>
-							3. Which disease do your crop have?<br>
-							4. How to cure the disease?</p>
+							2. What fertilizer to use? </p>
 					</div>
 				</div>
 			</div>
@@ -34,15 +32,7 @@
 			<div class="col-lg-6 core-left">
 				<img src="{{ url_for('static', filename='images/core.jpg') }}" class="img-fluid" alt="" />
 			</div>
-			<div class="col-lg-6 core-right">
-				<h3 class="mt-4">Improving Agriculture, Improving Lives, Cultivating Crops To Make Farmers Increase
-					Profit.</h3>
-				<p class="mt-3">We use state-of-the-art machine learning and deep learning technologies to help you
-					guide through
-					the entire farming process. Make informed decisions to understand the demographics of your area,
-					understand the
-					factors that affect your crop and keep them healthy for a super awesome successful yield.</p>
-			</div>
+			
 		</div>
 	</div>
 </section>
