--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,8 @@
 			<div class="overlay">
 				<div class="container">
 					<div class="w3layouts-banner-info text-center">
-						<h3 class="text-wh">Harvestify</h3>
-						<h4 class="text-wh mx-auto my-4"><b>Get informed decisions about your farming strategy.</b></h4>
-						<br>
-						<h4 class="text-wh mx-auto my-4"><strong> Here are some questions we'll answer</strong></h4>
+						<h3 class="text-wh">PLANT LEAF DISEASE DETECTION</h3>
+						
 						<p class="text-li mx-auto mt-2">
 							1. What crop to plant here? <br>
 							2. What fertilizer to use? </p>
