--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 <!-- core values -->
 <section class="core-value py-5">
 	<div class="container py-md-4">
-		<h3 class="heading mb-sm-5 mb-4 text-center"> About Us</h3>
+		<h3 class="heading mb-sm-5 mb-4 text-center"> </h3>
 		<div class="row core-grids">
 			<div class="col-lg-6 core-left">
 				<img src="{{ url_for('static', filename='images/core.jpg') }}" class="img-fluid" alt="" />
