--- a/templates/layout.html
+++ b/templates/layout.html
@@ -205,11 +205,9 @@
 				</p>
 			</div>
 			<div class="w3l-copy text-center">
-				<p class="text-da">An Environmental Intelligence Startup<br> </p>
+				<p class="text-da"><br> </p>
 			</div>
-			<p class="homelogo">
-			<p>Made with ❤️ by Atharva</p>
-			<p>&copy; Copyright 2022 Atharva Ingle</p>
+			
 
 		</div>
 	</footer>
