--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 			<div class="overlay">
 				<div class="container">
 					<div class="w3layouts-banner-info text-center">
-						<h3 class="text-wh">PLANT LEAF DISEASE DETECTION</h3>
+						<h3 class="text-wh">PLANT DISEASE DETECTION</h3>
 						
 						<p class="text-li mx-auto mt-2">
 							
