--- a/templates/index.html
+++ b/templates/index.html
@@ -9,15 +9,10 @@
 			<div class="overlay">
 				<div class="container">
 					<div class="w3layouts-banner-info text-center">
-						<h3 class="text-wh">Harvestify</h3>
+						<h3 class="text-wh">PLANT DISEASE DETECTION</h3>
 						<h4 class="text-wh mx-auto my-4"><b>Get informed decisions about your farming strategy.</b></h4>
 						<br>
-						<h4 class="text-wh mx-auto my-4"><strong> Here are some questions we'll answer</strong></h4>
-						<p class="text-li mx-auto mt-2">
-							1. What crop to plant here? <br>
-							2. What fertilizer to use? <br>
-							3. Which disease do your crop have?<br>
-							4. How to cure the disease?</p>
+						
 					</div>
 				</div>
 			</div>
@@ -26,43 +21,6 @@
 </section>
 <!-- //banner -->
 
-<!-- core values -->
-<section class="core-value py-5">
-	<div class="container py-md-4">
-		<h3 class="heading mb-sm-5 mb-4 text-center"> About Us</h3>
-		<div class="row core-grids">
-			<div class="col-lg-6 core-left">
-				<img src="{{ url_for('static', filename='images/core.jpg') }}" class="img-fluid" alt="" />
-			</div>
-			<div class="col-lg-6 core-right">
-				<h3 class="mt-4">Improving Agriculture, Improving Lives, Cultivating Crops To Make Farmers Increase
-					Profit.</h3>
-				<p class="mt-3">We use state-of-the-art machine learning and deep learning technologies to help you
-					guide through
-					the entire farming process. Make informed decisions to understand the demographics of your area,
-					understand the
-					factors that affect your crop and keep them healthy for a super awesome successful yield.</p>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- //core values -->
-
-
-<!-- //Products & Services -->
-
-
-<!-- Creating custom grid and hover effect
-<section>
-<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    <div class="hovereffect">
-        <img class="img-responsive" src="images/s2.jpg" alt="">
-        <div class="overlay">
-           <h2>Hover effect 1</h2>
-           <a class="info" href="#">link here</a>
-        </div>
-    </div>
-</div> -->
 
 </html>
 
