--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 				<div class="container">
 					<div class="w3layouts-banner-info text-center">
 						<h3 class="text-wh">PLANT DISEASE DETECTION</h3>
-						<h4 class="text-wh mx-auto my-4"><b>Get informed decisions about your farming strategy.</b></h4>
+						<h4 class="text-wh mx-auto my-4"><b></b></h4>
 						<br>
 						
 					</div>
